manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecosia-webapp
  namespace: ecosia-webapp
spec:
  type: NodePort
  selector:
    app: ecosia-webapp
  ports:
    - name: custom-port
      protocol: TCP
      port: 8080
      targetPort: main-port
