manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecosia-webapp-ingress
  namespace: ecosia-webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /tree(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ecosia-webapp
                port:
                  number: 8080
